--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </button></a>
       
       
-    <a href="about.html"><img src="/images/removwbg.png" alt=""></a>
+    <a href="about.html"><img src="./images/removwbg.png" alt=""></a>
 
 </body>
 </html>
