--- a/options.html
+++ b/options.html
@@ -18,7 +18,7 @@
     <a href="index.html"><button class="butto">
         home 
     </button></a>
-    <img src="./images/removwbg.png" alt="">
+    <a href="about.html"><img src="./images/removwbg.png" alt=""></a>
     
 </body>
 </html>
