--- a/options.html
+++ b/options.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROGRAMMING</title>
-    <link rel="icon" href="/icons/home.ico">
+    <link rel="icon" href="./icons/home.ico">
     <link rel="stylesheet" href="options.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
